# price-spike-probability-prediction-0rkfk7

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  deploy-docs.yml  publish-package.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
docs/architecture/: component_interaction.md  data_flow.md  system_overview.md
docs/deployment/: local_setup.md  scheduled_execution.md
docs/development/: adding_features.md  contributing.md  testing.md
docs/user_guides/: data_scientists.md  energy_scientists.md
examples/config/: backtest_config.yaml  inference_config.yaml  training_config.yaml
examples/notebooks/: feature_analysis.ipynb  model_evaluation.ipynb  quick_start.ipynb
infrastructure/docker/: .env.example  README.md  backend.Dockerfile  cli.Dockerfile  docker-compose.yml
infrastructure/monitoring/: prometheus.yml
infrastructure/monitoring/grafana/dashboards/: data_quality.json  model_performance.json  system_metrics.json
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/monitoring/grafana/provisioning/datasources/: datasource.yml
infrastructure/scripts/: backup_data.sh  daily_inference.sh  model_retraining.sh  restore_data.sh  setup_environment.sh
src/backend/: .env.example  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
src/backend/api/: __init__.py  backtesting_api.py  data_api.py  inference_api.py  visualization_api.py
src/backend/backtesting/: __init__.py  framework.py  historical_simulation.py  performance_metrics.py  scenario_definitions.py
src/backend/config/: __init__.py  default_config.py  schema.py  validation.py
src/backend/config/hydra/: __init__.py  config.yaml  data.yaml  features.yaml  inference.yaml  models.yaml  visualization.yaml
src/backend/data/: __init__.py
src/backend/data/fetchers/: __init__.py  base.py  ercot_api.py  grid_conditions.py  mock.py  weather_api.py
src/backend/data/storage/: __init__.py  forecast_repository.py  model_registry.py  parquet_store.py
src/backend/data/validators/: __init__.py  data_quality.py  pandera_schemas.py  schemas.py
src/backend/docs/: Makefile  index.rst  make.bat
src/backend/docs/source/api/: backtesting.rst  data.rst  features.rst  inference.rst  models.rst  orchestration.rst  utils.rst  visualization.rst
src/backend/features/: __init__.py  feature_pipeline.py  feature_registry.py  feature_selection.py  market_features.py  statistical_features.py  time_features.py  weather_features.py
src/backend/inference/: __init__.py  calibration.py  engine.py  prediction_pipeline.py  threshold_config.py  thresholds.py
src/backend/models/: __init__.py  base_model.py  ensemble.py  evaluation.py  hyperparameter_tuning.py  lightgbm_model.py  persistence.py  training.py  versioning.py  xgboost_model.py
src/backend/orchestration/: __init__.py  error_recovery.py  pipeline.py  scheduler.py  task_management.py
src/backend/tests/: __init__.py
src/backend/tests/fixtures/: __init__.py  mock_responses.py  sample_data.py
src/backend/tests/integration/: __init__.py  test_data_flow.py  test_end_to_end.py
src/backend/tests/unit/: __init__.py  test_backtesting.py  test_data_fetchers.py  test_feature_engineering.py  test_model_training.py
src/backend/utils/: __init__.py  date_utils.py  error_handling.py  logging.py  statistics.py  type_definitions.py  validation.py
src/backend/visualization/: calibration_plots.py  export.py  feature_importance.py  forecast_plots.py  metrics_dashboard.py  performance_plots.py
src/cli/: .pre-commit-config.yaml  README.md  __init__.py  cli_app.py  cli_types.py  exceptions.py  logger.py  main.py  pyproject.toml  setup.py
src/cli/commands/: __init__.py  backtest.py  evaluate.py  fetch_data.py  predict.py  train.py  visualize.py
src/cli/config/: __init__.py  cli_config.py  default_config.py
src/cli/scripts/: completion.sh  install_cli.sh  rtlmp_predict.sh
src/cli/tests/: __init__.py  test_ui.py  test_utils.py
src/cli/tests/fixtures/: __init__.py  mock_responses.py  sample_configs.py
src/cli/ui/: __init__.py  charts.py  colors.py  formatters.py  spinners.py  tables.py
src/cli/utils/: __init__.py  config_helpers.py  error_handlers.py  formatters.py  output_handlers.py  progress_bars.py  validators.py
