[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ercot-rtlmp-cli"
version = "0.1.0"
description = "Command-line interface for the ERCOT RTLMP spike prediction system"
authors = ["Data Science Team <datascience@example.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["ercot", "energy", "price-prediction", "cli", "command-line"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
click = ">=8.1.0"
typer = ">=0.9.0"
rich = ">=13.0.0"
pydantic = ">=2.0.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
plotly = ">=5.14.0"
tabulate = ">=0.9.0"
tqdm = ">=4.65.0"
colorama = ">=0.4.6"
python-dotenv = ">=1.0.0"
ercot-rtlmp-prediction = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.10.0"
black = ">=23.3.0"
isort = ">=5.12.0"
mypy = ">=1.3.0"
pre-commit = ">=3.3.0"

[tool.poetry.scripts]
rtlmp_predict = "src.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"